@@ -1,3 +1,8 @@
+2006-08-18: 
+	- sort the demoted software list
+2006-07-31:
+	- updated to edgy
+	- uploadedd
 2006-05-31: 
 	- fix bug in the free space calculation (#47092)
 	- updated ReleaseAnnouncement
